@@ -1,10 +1,10 @@
 TARGET=c64
 
 
-.PHONY: ip65 drivers test clean distclean carts examples
+.PHONY: ip65 drivers test clean distclean carts examples basic kipperterm2
 
 
-all: ip65 drivers test carts  examples
+all: ip65 drivers test carts  examples basic kipperterm2
 
 ip65:
 	make -C ip65 all
@@ -21,15 +21,25 @@ test:
 carts:
 	make -C carts all
 
+basic:
+	make -C basic all
+
+kipperterm2:
+	make -C kipperterm2 all
+
 clean:
 	make -C ip65 clean
 	make -C drivers clean
 	make -C test clean
 	make -C carts clean
+	make -C kipperterm2 clean
+	make -C basic clean  	
 
 distclean:
 	make -C ip65 distclean
 	make -C drivers clean
 	make -C test distclean
 	make -C carts distclean
+	make -C kipperterm2 distclean
+	make -C basic distclean  	
 	rm -f *~
