@@ -281,6 +281,12 @@ tcp_connect:
   sec             ;signal an error
   rts
 @got_a_response:
+  lda tcp_state  
+  cmp #tcp_cxn_state_closed
+  bne @was_accepted
+  sec     ;if we got here, then the other side sent a RST or FIN, so signal an error to the caller
+  rts
+@was_accepted:
 tcp_connection_established:
 ;inc the sequence number to cover the SYN we have sent
   ldax  #tcp_connect_sequence_number
